# moon-dev-bootcamp

./: .gitignore  README.md
gordon/: .env.example  README.md  __init__.py  __main__.py  config.yaml  main.py  pyproject.toml  requirements.txt  run_gordon.bat  run_gordon.sh
gordon/agent/: __init__.py  agent.py  conversation_analytics.py  conversation_export.py  conversation_memory.py  conversation_search.py  conversational_assistant.py  gordon_agent.py  hybrid_analyzer.py  market_context.py  market_stream_manager.py  model.py  multi_user_manager.py  nl_command_parser.py  prompts.py
gordon/api/: __init__.py
gordon/api/routes/: __init__.py  backtesting.py  dashboard.py  database.py  market.py  ml.py  portfolio.py  realtime.py  research.py  risk.py  sentiment.py  strategies.py  trading.py  websocket.py  whales.py
gordon/backtesting/: __init__.py  backtest_main.py  base.py
gordon/backtesting/analysis/: __init__.py  analyzer.py  comparator.py  reporter.py
gordon/backtesting/config/: __init__.py
gordon/backtesting/data/: __init__.py  binance_provider.py  bitfinex_provider.py  fetcher.py  historical_data_manager.py  provider.py  provider_factory.py  yahoo_provider.py
gordon/backtesting/evolution/: __init__.py  evolved_strategy.py  gp_engine.py  gp_runner.py
gordon/backtesting/runners/: __init__.py  backtest_runner.py  optimizer.py
gordon/backtesting/utils/: __init__.py  alpha_decay_test.py  backtest_template.py  backtesting_import.py  data_filters.py  decorators.py  indicators.py  liquidation_data_prep.py
gordon/bots/: live_breakout_bot.py  live_mean_reversion_bot.py
gordon/core/: algo_orders.py  algo_orders_original.py  event_bus.py  market_data_stream.py  orchestrator.py  position_manager.py  risk_manager.py  strategy_engine.py  strategy_manager.py  websocket_manager.py
gordon/core/algo_orders/: __init__.py  base.py  dca.py  examples.py  grid.py  iceberg.py  manual_loop.py  scheduled.py  twap.py  vwap.py
gordon/core/caching/: __init__.py  cache_manager.py
gordon/core/config/: __init__.py
gordon/core/data_collectors/: __init__.py  liquidation_collector.py
gordon/core/database/: __init__.py  event_listener.py  manager.py  models.py
gordon/core/interfaces/: __init__.py  alert_handler.py  data_fetcher.py  market_analyzer.py  order_executor.py  signal_executor.py
gordon/core/risk/: __init__.py  account_monitor.py  base_manager.py  drawdown_calculator.py  leverage_manager.py  pnl_calculator.py  portfolio_pnl_manager.py  position_sizer.py  risk_limits.py
gordon/entrypoints/: __init__.py  api_server.py  cli.py  run_gordon.py
gordon/exchanges/: base.py  binance.py  bitfinex.py  factory.py  hyperliquid.py
gordon/legacy/: main_old.py
gordon/market/: __init__.py  display.py  exchange_clients.py  funding_analysis.py  market_dashboard.py
gordon/ml/: __init__.py  indicator_discovery.py  indicator_evaluator.py  indicator_looper.py  indicator_ranker.py  manager.py
gordon/tests/: __init__.py  test_gordon.py  test_gordon_run.py  test_gordon_simple.py  test_gordon_startup.py  test_integration.py  test_simple.py
gordon/tools/: __init__.py
gordon/utilities/: __init__.py  data_utils.py  exchange_utils.py  format_utils.py  logger.py  master_utils.py  math_utils.py  signal_utils.py  test_imports.py  test_imports_simple.py  time_utils.py
gordon/utils/: intro.py  logger.py
(+549 files in other folders)
