[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gordon"
version = "1.0.0"
description = "Financial Research & Trading Agent - Combining Warren Buffett's fundamentals with Renaissance Technologies' quantitative trading"
authors = [{name = "Gordon Team"}]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "websockets>=11.0.3",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "prompt-toolkit>=3.0.36",
    "rich>=13.0.0",
    "ccxt>=4.1.0",
    "python-binance>=1.0.17",
    # Note: hyperliquid-python may not be available on PyPI - install manually if needed
    # Alternative: pip install hyperliquid-python-sdk or pip install git+https://github.com/hyperliquid-dex/hyperliquid-python-sdk
    # "hyperliquid-python>=0.1.0",
    "eth-account>=0.10.0",
    "web3>=6.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pandas-ta>=0.3.14b0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    # yfinance>=0.2.28,  # Commented out due to multitasking/Python 3.12 compatibility issues
    # Install manually if needed: pip install "yfinance>=0.2.66" --no-deps && pip install "multitasking>=0.0.7" --no-build-isolation
    "backtesting>=0.3.3",
    "backtrader>=1.9.78.123",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "termcolor>=2.3.0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "loguru>=0.7.2",
    "aiofiles>=23.2.1",
    # Additional dependencies for extended functionality
    "deap>=1.4.0",  # Genetic Programming (Day 29)
    "textblob>=0.17.0",  # Sentiment Analysis (Day 28)
    "vaderSentiment>=3.3.0",  # Sentiment Analysis (Day 28)
    "twikit>=1.5.0",  # Twitter Collection (Day 28, Day 36)
    "fake-useragent>=1.4.0",  # Twitter Collection (Day 28)
    "nest-asyncio>=1.5.0",  # Async support for trader intelligence
    "ta>=0.10.0",  # Technical Analysis library
    # Note: ta-lib requires C library installation - install separately if needed
    # "ta-lib>=0.4.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "ipython>=8.15.0",
    "pre-commit>=3.4.0",
]
ml = [
    "tensorflow>=2.14.0",
    "torch>=2.0.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.5.0",
]

[project.scripts]
gordon = "gordon.entrypoints.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gordon*", "entrypoints*", "agent*", "core*", "backtesting*", "research*", "tools*", "config*", "ml*", "exchanges*"]
# Or simpler: just include all packages
# include = ["*"]

[tool.setuptools.package-data]
gordon = ["config.yaml", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

